vbnc/vbnc/tests/Errors/30311-4.vb
Class T
    Const M_Char_Char As Char = #1/1/2008#
End Class